SOHO-7723 fix button alignment issue

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -642,7 +642,14 @@ a.btn-menu {
         }
       }
     }
- 	}
+  }
+  button {
+    margin-bottom: 5px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 // Short field buttons
